--- a/lang/en.json
+++ b/lang/en.json
@@ -1,6 +1,6 @@
 [
   {
-    "name": "FILEDIA",
+    "name": "FILEDIA2",
     "desc": "Suppresses display of file navigation dialog boxes..",
     "options": [
       {
