--- a/lang/en.json
+++ b/lang/en.json
@@ -1,15 +1,15 @@
 [
   {
   "name": "*_TOOLPALETTEPATH",
-    "desc": "Controls the path(s) that are used for the Tool Palette Windows.",
+    "desc": "Controls the path(s) that are used for the Tool Palette Windows."
   },
     {
   "name": "_PKSER",
-    "desc": "Returns the product's serial number.",
+    "desc": "Returns the product's serial number."
   },
       {
   "name": "_VERNUM",
-    "desc": "Returns the product's build version number.",
+    "desc": "Returns the product's build version number."
   },
   {
     "name": "FILEDIA",
